dark mode bug fix

--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@
 }
 
 .about_data{
-    flex: 1;
-    font-size: 16px;
+    flex: 1 !important;
+    font-size: 16px !important;
 }
 
 
